hide scrollbar fix position proglems

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -12,6 +12,15 @@
   html {
     scroll-behavior: smooth;
   }
+  body::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  body{
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
   .mainAnimation {
     animation: transitionIn 0.3s;
   }
@@ -31,12 +40,13 @@
     @apply bg-white text-gray-600 antialiased
     dark:bg-gray-900 dark:text-gray-400;
   }
+
   ::selection {
     @apply bg-green-300 text-gray-600
     dark:bg-green-500 dark:text-gray-100;
   }
   .sc {
-    @apply max-w-screen-md mx-auto;
+    @apply max-w-screen-md mx-auto px-2 md:px-0;
   }
   .sc-large {
     @apply max-w-screen-2xl mx-auto px-4;
